change link & credit

--- a/src/index.html
+++ b/src/index.html
@@ -117,10 +117,10 @@
                 </p>
             </aside>
             <footer>
-                <a href="https://github.com/Saw-mon-and-Natalie/password-generator" target="_blank" rel="noopener">
+                <a href="https://github.com/igor-makarov/password-generator" target="_blank" rel="noopener">
                     <img class="icon" src="img/github.svg" alt="GitHub OctaCat Logo icon." width="24" />
                 </a>
-                <p>made with love by Saw-mon & Natalie</p>
+                <p>made with love by Saw-mon & Natalie<br> refined by Igor Makarov</p>
                 <img id="settings-icon" class="icon" src="img/settings.svg" alt="Sprocket gear icon for settings panel." width="24" />
             </footer>
         </div>
