--- a/src/index.html
+++ b/src/index.html
@@ -105,7 +105,8 @@
     <body>
         <div id="left">
             <header>
-                <h1>Password<br> Generator</h1>
+                <h1>GenPass</h1>
+                <p class="subtitle">Generate cryptographically secure passwords</p>
             </header>
             <aside>
                 <img id="key-symbol" src="img/key.svg" alt="A key made of 4 zigsaw puzzle pieces of varying blue shades." width="100"/>
@@ -118,7 +119,7 @@
                 <a href="https://github.com/igor-makarov/password-generator" target="_blank" rel="noopener">
                     <img class="icon" src="img/github.svg" alt="GitHub OctaCat Logo icon." width="24" />
                 </a>
-                <p>made with love by Saw-mon & Natalie<br> refined by Igor Makarov</p>
+                <p>made by Saw-mon & Natalie<br> refined by Igor Makarov</p>
                 <img id="settings-icon" class="icon" src="img/settings.svg" alt="Sprocket gear icon for settings panel." width="24" />
             </footer>
         </div>
