--- a/src/index.html
+++ b/src/index.html
@@ -53,22 +53,22 @@
         <link rel="manifest" href="manifest.json" />
         <meta name="msapplication-config" content="/browserconfig.xml" />
         
-        <meta name="author" content="Saw-mon &amp; Natalie">
+        <meta name="author" content="Saw-mon &amp; Natalie, Igor Makarov">
         <meta name="creator" content="Saw-mon &amp; Natalie">
-        <meta name="twitter:site" content="@sw0nt">
-        <meta name="twitter:creator" content="@sw0nt">
-        <meta name="apple-mobile-web-app-title" content="saw-mon &amp; natalie">
-        <meta name="application-name" content="saw-mon &amp; natalie">
+        <meta name="twitter:site" content="@igormaka">
+        <meta name="twitter:creator" content="@igormaka">
+        <meta name="apple-mobile-web-app-title" content="GenPass">
+        <meta name="application-name" content="GenPass">
 
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="Cryptographically Strong Random Password Generator">
-        <meta name="twitter:image" content="https://passwd.sawmon-and-natalie.com/img/og.webp">
+        <meta name="twitter:image" content="https://genpass.net/img/og.webp">
         <meta name="twitter:image:alt" content="Password Generator and a key made of jigsaw puzzle pieces on a background made of complex string of cryptographic letters.">
 
         <meta property="og:type" content="website">
-        <meta property="og:url" content="https://passwd.sawmon-and-natalie.com/">
+        <meta property="og:url" content="https://genpass.net/">
         <meta property="og:title" content="Cryptographically Strong Random Password Generator">
-        <meta property="og:image" content="https://passwd.sawmon-and-natalie.com/img/og.png">
+        <meta property="og:image" content="https://genpass.net/img/og.png">
         <meta property="og:image:type" content="image/png">
         <meta property="og:image:width" content="1200px">
         <meta property="og:image:height" content="1200px">
@@ -78,19 +78,18 @@
             {
                 "@context": "https://schema.org/",
                 "@type": "WebApplication",
-                "name": "Password Generator",
+                "name": "GenPass",
                 "applicationCategory": "UtilitiesApplication",
               	"operatingSystem": "Android, MacOS, OSX, iOS, Windows, Linux",
                 "applicationSubCategory": "Passwords",
-                "author": "Saw-mon & Natalie",
-                "screenshot": "https://passwd.sawmon-and-natalie.com/img/screenshot.png",
-                "copyrightHolder": "Saw-mon & Natalie",
-                "copyrightYear": 2020,
-                "abstract": "Cryptographically Strong Random Password Generator app that creates complex strong passowrds. The passwords are generated client side without sending any information to an external machine/server.",
+                "author": "Saw-mon & Natalie, Igor Makarov",
+                "copyrightHolder": "Igor Makarov",
+                "copyrightYear": 2021,
+                "abstract": "Cryptographically strong password generator app that creates complex strong passowrds. The passwords are generated client side without sending any information to an external machine/server.",
                 "offers": {
                     "@type": "Offer",
                     "price": "0",
-                    "priceCurrency": "CAD"
+                    "priceCurrency": "USD"
                 },
                 "aggregateRating": {
                     "@type": "AggregateRating",
@@ -99,7 +98,7 @@
                 }
             }
         </script>
-        <link rel="canonical" href="https://passwd.sawmon-and-natalie.com/">
+        <link rel="canonical" href="https://genpass.net/">
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
