--- a/src/index.html
+++ b/src/index.html
@@ -68,6 +68,7 @@
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://genpass.net/">
         <meta property="og:title" content="Cryptographically Strong Random Password Generator">
+        <meta property="og:description" content="Cryptographically strong random password Generator app that creates complex strong passowrds. The passwords are generated client side without sending any information to an external machine/server.">
         <meta property="og:image" content="https://genpass.net/img/og.png">
         <meta property="og:image:type" content="image/png">
         <meta property="og:image:width" content="1200px">
