edit og:image and twitter:image

--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
 
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="Cryptographically Strong Random Password Generator">
-        <meta name="twitter:image" content="https://genpass.net/img/og.webp">
+        <meta name="twitter:image" content="https://genpass.net/img/og.png">
         <meta name="twitter:image:alt" content="Password Generator and a key made of jigsaw puzzle pieces on a background made of complex string of cryptographic letters.">
 
         <meta property="og:type" content="website">
