--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,9 @@
         <meta name="robots" content="index,follow">
         <meta name="referrer" content="origin-when-cross-origin">
 
-        <title>Password Generator App</title>
-        <meta name="description" content="Cryptographically Strong Random Password Generator app that creates complex strong passowrds. The passwords are generated client side without sending any information to an external machine/server.">
-        <meta name="keywords" content="Strong Password, Strong Password Generator, Cryptography, Password Generator, Online Password Generator, Random Password Generator, Secure Password Generator, Create Password, Generate Password, CLient-side Password Generator">
+        <title>GenPass</title>
+        <meta name="description" content="Cryptographically strong random password generator app that creates complex strong passowrds. The passwords are generated client side without sending any information to an external machine/server.">
+        <meta name="keywords" content="Strong Password, Strong Password Generator, Cryptography, Password Generator, Online Password Generator, Random Password Generator, Secure Password Generator, Create Password, Generate Password, Client-side Password Generator">
         
         <!-- <link rel="icon" type="image/x-icon" size="16x16 24x24 32x32 48x48 64x64 72x72 96x96 128x128 256x256" href="/img/icons/f.ico"/> -->
 
@@ -44,8 +44,8 @@
         <link rel="icon" type="image/png" sizes="32x32" href="img/icons/favicon-32x32.png"/>
         <link rel="icon" type="image/png" sizes="24x24" href="img/icons/favicon-24x24.png"/>
         <link rel="icon" type="image/png" sizes="16x16" href="img/icons/favicon-16x16.png"/>
-        <meta name="apple-mobile-web-app-title" content="Password Generator"/>
-        <meta name="application-name" content="Password Generator"/>
+        <meta name="apple-mobile-web-app-title" content="GenPass"/>
+        <meta name="application-name" content="GenPass"/>
         <meta name="msapplication-TileColor" content="#d7e5fb"/>
         <meta name="msapplication-TileImage" content="/static/icons/mstile-144x144.png"/>
         <meta name="theme-color" content="#d7e5fb"/>
@@ -57,18 +57,16 @@
         <meta name="creator" content="Saw-mon &amp; Natalie">
         <meta name="twitter:site" content="@igormaka">
         <meta name="twitter:creator" content="@igormaka">
-        <meta name="apple-mobile-web-app-title" content="GenPass">
-        <meta name="application-name" content="GenPass">
 
         <meta name="twitter:card" content="summary_large_image">
-        <meta name="twitter:title" content="Cryptographically Strong Random Password Generator">
+        <meta name="twitter:title" content="GenPass - Cryptographically strong random password generator">
         <meta name="twitter:image" content="https://genpass.net/img/og.png">
         <meta name="twitter:image:alt" content="Password Generator and a key made of jigsaw puzzle pieces on a background made of complex string of cryptographic letters.">
 
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://genpass.net/">
-        <meta property="og:title" content="Cryptographically Strong Random Password Generator">
-        <meta property="og:description" content="Cryptographically strong random password Generator app that creates complex strong passowrds. The passwords are generated client side without sending any information to an external machine/server.">
+        <meta property="og:title" content="Cryptographically strong random password generator">
+        <meta property="og:description" content="Cryptographically strong random password generator app that creates complex strong passowrds. The passwords are generated client side without sending any information to an external machine/server.">
         <meta property="og:image" content="https://genpass.net/img/og.png">
         <meta property="og:image:type" content="image/png">
         <meta property="og:image:width" content="1200px">
