--- a/src/index.html
+++ b/src/index.html
@@ -59,13 +59,13 @@
         <meta name="twitter:creator" content="@igormaka">
 
         <meta name="twitter:card" content="summary_large_image">
-        <meta name="twitter:title" content="GenPass - Cryptographically strong random password generator">
+        <meta name="twitter:title" content="GenPass">
         <meta name="twitter:image" content="https://genpass.net/img/og.png">
         <meta name="twitter:image:alt" content="Password Generator and a key made of jigsaw puzzle pieces on a background made of complex string of cryptographic letters.">
 
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://genpass.net/">
-        <meta property="og:title" content="Cryptographically strong random password generator">
+        <meta property="og:title" content="GenPass">
         <meta property="og:description" content="Cryptographically strong random password generator app that creates complex strong passowrds. The passwords are generated client side without sending any information to an external machine/server.">
         <meta property="og:image" content="https://genpass.net/img/og.png">
         <meta property="og:image:type" content="image/png">
