Update index.html for SEO

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 
         <title>GenPass</title>
         <meta name="description" content="Cryptographically strong random password generator app that creates complex strong passowrds. The passwords are generated client side without sending any information to an external machine/server.">
-        <meta name="keywords" content="Strong Password, Strong Password Generator, Cryptography, Password Generator, Online Password Generator, Random Password Generator, Secure Password Generator, Create Password, Generate Password, Client-side Password Generator">
+        <meta name="keywords" content="Strong Password, Strong Password Generator, Cryptography, Password Generator, Online Password Generator, Random Password Generator, Secure Password Generator, Create Password, Generate Password, Client-side Password Generator, Generate password online for free">
         
         <!-- <link rel="icon" type="image/x-icon" size="16x16 24x24 32x32 48x48 64x64 72x72 96x96 128x128 256x256" href="/img/icons/f.ico"/> -->
 
@@ -104,7 +104,8 @@
         <div id="left">
             <header>
                 <h1>GenPass</h1>
-                <p class="subtitle">Generate cryptographically secure passwords</p>
+                <p class="subtitle">A free, open-source, online password generator</p>
+                <p class="subtitle">Cryptographically secure passwords for everyone</p>
             </header>
             <aside>
                 <img id="key-symbol" src="img/key.svg" alt="A key made of 4 zigsaw puzzle pieces of varying blue shades." width="100"/>
